--- a/pics/templates/base.html
+++ b/pics/templates/base.html
@@ -17,13 +17,17 @@
 </head>
 <body>
     {% include "navbar.html" %}
+
+    {% block content %}
+
+    {% endblock %}
     
     {% block scripts %}
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-        {% bootstrapjavascript %}
+        {% bootstrap_javascript %}
     {% endblock %}
 </body>
 </html>
