--- a/pics/templates/index.html
+++ b/pics/templates/index.html
@@ -2,4 +2,14 @@
 
 {% block content %}
     {{block.super}}
+
+    <div class="container-fluid">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-3">Fluid jumbotron</h1>
+                <p class="lead">This is a modified jumbotron that occupies
+                    the entire horizontal space of its parent.</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
