--- a/pics/templates/base.html
+++ b/pics/templates/base.html
@@ -1,4 +1,5 @@
 {% load bootstrap4 %}
+{% load fontawesome_5 %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,6 +11,8 @@
     {% else %}
         <title>Picha</title>
     {% endif %}
+
+    {% fontawesome_5_static %}
     
     {% block styles %}
         {% bootstrap_css %}
