--- a/pics/templates/navbar.html
+++ b/pics/templates/navbar.html
@@ -18,9 +18,9 @@
             </li>
         -->
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_category' %}">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" name="images">
+        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
   </nav>
